// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/IntlProvider should render children when passed translation strings 1`] = `
<span>
  Hello, World!
</span>
`;

exports[`components/IntlProvider should render children when passed translation strings for a non-default locale 1`] = `
<span>
  Bonjour tout le monde!
</span>
`;
